--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "oauth": "^0.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
