--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
-    "oauth": "^0.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "nodemon": "^3.1.0",
+    "oauth": "^0.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.79",
